k8s_dev/bcc-api-gate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcc-api-gate-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: bcc-api-gate
  template:
    metadata:
      labels:
        component: bcc-api-gate
    spec:
      serviceAccountName: bcc-agent
      containers:
        - name: api-gate
          image: bcc/api-gate
          ports:
            - containerPort: 5000
