k8s_dev/bcc-api-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcc-api-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bcc-api-server
  template:
    metadata:
      labels:
        component: bcc-api-server
    spec:
      serviceAccountName: bcc-agent
      # initContainers:
      #   - name: check-redis
      #     image: redis
      #     command: [
      #       'sh',
      #       '-c',
      #       'until redis-cli -h redis -p 6379 ping; do echo waiting...; sleep 1; done;'
      #     ]
      containers:
        - name: api-server
          image: bcc/api-server
          ports:
            - containerPort: 5000
