k8s_dev/bcc-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcc-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bcc-db
  template:
    metadata:
      labels:
        component: bcc-db
    spec:
      volumes:
        - name: bcc-db-storage
          persistentVolumeClaim:
            claimName: bcc-db-storage
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts: 
            - mountPath: "/data/db"
              name: bcc-db-storage
