k8s_dev/bcc-db-gate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcc-db-gate-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: bcc-db-gate
  template:
    metadata:
      labels:
        component: bcc-db-gate
    spec:
      serviceAccountName: bcc-agent
      containers:
        - name: db-gate
          image: bcc/db-gate
          ports:
            - containerPort: 5000
