k8s_dev/bcc-transaction-gate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bcc-transaction-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: bcc-transaction-gate
  template:
    metadata:
      labels:
        component: bcc-transaction-gate
    spec:
      serviceAccountName: bcc-agent
      containers:
        - name: transaction-gate
          image: bcc/transaction-gate
          ports:
            - containerPort: 5000
