k8s_dev/bcc-webClient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-client
  template:
    metadata:
      labels:
        component: web-client
    spec:
      containers:
        - name: web-client
          image: bcc/web-client
          ports:
            - containerPort: 3000
