k8s_dev/bcc-api-gate-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-api-gate
spec:
  type: ClusterIP
  selector: 
    component: bcc-api-gate
  ports:
    - port: 5000
      targetPort: 5000
