k8s_dev/bcc-api-server-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-api-server
spec:
  type: ClusterIP
  selector: 
    component: bcc-api-server
  ports:
    - port: 5000
      targetPort: 5000
