k8s_dev/bcc-cache-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-cache
spec:
  type: ClusterIP
  selector:
    component: bcc-cache
  ports:
    - port: 6379
      targetPort: 6379
