k8s_dev/bcc-db-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-db
spec:
  type: ClusterIP
  selector:
    component: bcc-db
  ports:
    - port: 27017
      targetPort: 27017
