k8s_dev/bcc-transaction-gate-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcc-transaction-gate
spec:
  type: ClusterIP
  selector: 
    component: bcc-transaction-gate
  ports:
    - port: 5000
      targetPort: 5000
