k8s_dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bcc-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /db/?(.*)
            backend:
              serviceName: bcc-db
              servicePort: 27017
          - path: /api/?(.*)
            backend:
              serviceName: bcc-api-server
              servicePort: 5000
          - path: /?(.*)
            backend:  
              serviceName: web-client
              servicePort: 3000
